--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,10 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      # run: mvn -B package --file pom.xml
+      run: mvn -B package --file pom.xml
+
+    # Mvn Test
+    - name: mvn test
       run: mvn clean test
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
